--- a/Advance Practice in Python.ipynb
+++ b/Advance Practice in Python.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "9656826e",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "{'a': 7, 'd': 31, 'c': 10, 'G': 5, 'g': 1, 'b': 14}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,6 +490,70 @@
     "                result[x] += 1\n",
     "    return result\n",
     "count_if(lst1,\"asdadsadasdasdasdasdccsssGGGGGssssgsssssssbbbbbbbbbbbbbbddddddddddddddddddddddddcccccccc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7a353d2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 0\n",
+    "\n",
+    "while num < 30:\n",
+    "    num += 1\n",
+    "    print(\"hello\")\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc491138",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def input_number(num):\n",
+    "    "
    ]
   }
  ],
