--- a/Advance Practice in Python.ipynb
+++ b/Advance Practice in Python.ipynb
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7a353d2c",
+   "id": "dd449016",
    "metadata": {},
    "outputs": [
     {
@@ -547,13 +547,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dc491138",
+   "execution_count": 32,
+   "id": "ffbae1c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We falied the interval. Our Service Level is 79.7979797979798 and our Abandon rate is -0.1\n"
+     ]
+    }
+   ],
    "source": [
-    "def input_number(num):\n",
-    "    "
+    "def interval_level(off, hnd, ans):\n",
+    "    svl = (ans/off)*100\n",
+    "    abn = .100* (hnd-off)\n",
+    "    if svl >= 80:\n",
+    "        print(f\"We passed the interval. Our Service Level is {svl} and our Abandon rate is {abn}\")\n",
+    "    else:\n",
+    "        print(f\"We falied the interval. Our Service Level is {svl} and our Abandon rate is {abn}\")\n",
+    "        \n",
+    "interval_level(99,98,79)"
    ]
   }
  ],
