--- a/Advance Practice in Python.ipynb
+++ b/Advance Practice in Python.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "9656826e",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "{'a': 7, 'd': 31, 'c': 10, 'G': 5, 'g': 1, 'b': 14}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,13 +489,13 @@
     "            else:\n",
     "                result[x] += 1\n",
     "    return result\n",
-    "count_if(lst1,\"asdadsadasdasdasdasdccsssGGGGGssssgsssssssbbbbbbbbbbbbbbddddddddddddddddddddddddcccccccc\")"
+    "count_if(lst1,\"asdadsadasdasdasdasdccsssGGGGGssssgsssssssbbbbbbbb128901238921389021390813208389031280912308912839012839108390128319023812093812093810938192bbbbbbddddddddddddddddddddddddcccccccc\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dd449016",
+   "id": "4c7b91cb",
    "metadata": {},
    "outputs": [
     {
@@ -547,28 +547,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "ffbae1c6",
+   "execution_count": 17,
+   "id": "724c33e1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We falied the interval. Our Service Level is 79.7979797979798 and our Abandon rate is -0.1\n"
+      "We falied the interval. Our Service Level is 79.7979797979798 and our Abandon rate is 19.19191919191919%\n"
      ]
     }
    ],
    "source": [
     "def interval_level(off, hnd, ans):\n",
     "    svl = (ans/off)*100\n",
-    "    abn = .100* (hnd-off)\n",
+    "    abn = ((off - hnd)/off)*100\n",
     "    if svl >= 80:\n",
-    "        print(f\"We passed the interval. Our Service Level is {svl} and our Abandon rate is {abn}\")\n",
+    "        print(f\"We passed the interval. Our Service Level is {svl} and our Abandon rate is {abn}%\")\n",
     "    else:\n",
-    "        print(f\"We falied the interval. Our Service Level is {svl} and our Abandon rate is {abn}\")\n",
+    "        print(f\"We falied the interval. Our Service Level is {svl} and our Abandon rate is {abn}%\")\n",
     "        \n",
-    "interval_level(99,98,79)"
+    "interval_level(99,80,79)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "30cd5944",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 \n"
+     ]
+    }
+   ],
+   "source": [
+    " def fib(n):    # write Fibonacci series up to n\n",
+    "    \"\"\"Print a Fibonacci series up to n.\"\"\"\n",
+    "    a, b = 0, 1\n",
+    "    while a < n:\n",
+    "        print(a, end=' ')\n",
+    "        a, b = b, a+b\n",
+    "    print()\n",
+    "\n",
+    "# Now call the function we just defined:\n",
+    "fib(2000)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "959dbd2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 5,\n",
+       " 8,\n",
+       " 13,\n",
+       " 21,\n",
+       " 34,\n",
+       " 55,\n",
+       " 89,\n",
+       " 144,\n",
+       " 233,\n",
+       " 377,\n",
+       " 610,\n",
+       " 987,\n",
+       " 1597,\n",
+       " 2584,\n",
+       " 4181,\n",
+       " 6765,\n",
+       " 10946,\n",
+       " 17711,\n",
+       " 28657,\n",
+       " 46368,\n",
+       " 75025,\n",
+       " 121393,\n",
+       " 196418,\n",
+       " 317811,\n",
+       " 514229,\n",
+       " 832040]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def fib2(n):\n",
+    "    \"\"\"Fibonacci\"\"\"\n",
+    "    result = []\n",
+    "    a,b = 0,1\n",
+    "    while a < n:\n",
+    "        result.append(a)\n",
+    "        a,b = b, a+b\n",
+    "    return result\n",
+    "\n",
+    "fib2(1000000)"
    ]
   }
  ],
