function for cleaning up data

--- a/Advance Practice in Python.ipynb
+++ b/Advance Practice in Python.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "959dbd2f",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
        " 832040]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,449 @@
     "        a,b = b, a+b\n",
     "    return result\n",
     "\n",
-    "fib2(1000000)"
+    "fib2(1000000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0a8e3be6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 1]\n",
+      "[3, 4, 5, 6, 7, 8, 9, 10, 1, 2]\n",
+      "[4, 5, 6, 7, 8, 9, 10, 1, 2, 3]\n",
+      "[5, 6, 7, 8, 9, 10, 1, 2, 3, 4]\n",
+      "[6, 7, 8, 9, 10, 1, 2, 3, 4, 5]\n",
+      "[7, 8, 9, 10, 1, 2, 3, 4, 5, 6]\n",
+      "[8, 9, 10, 1, 2, 3, 4, 5, 6, 7]\n",
+      "[9, 10, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "[10, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "deck = [1,2,3,4,5,6,7,8,9,10]\n",
+    "last = deck[-1]\n",
+    "\n",
+    "while last > deck[0]:\n",
+    "    a = deck.pop(0)\n",
+    "    deck.append(a)\n",
+    "    print(deck)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "848ebc11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess number from 1-101\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "ans = int(input(\"Guess number from 1-10\"))\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "63f30220",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'100 and the color is blue'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#default Argument Values\n",
+    "#\n",
+    "\n",
+    "i = 3\n",
+    "\n",
+    "def f(arg=i):\n",
+    "    return i\n",
+    "\n",
+    "f()\n",
+    "\n",
+    "def key_word_args(a, color=\"red\"):\n",
+    "    return f\"{a} and the color is {color}\"\n",
+    "\n",
+    "key_word_args(100)\n",
+    "key_word_args(100, color=\"blue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "308b3434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def cheeseshop(kind, *arguments, **keywords):\n",
+    "    print(\"-- Do you have any\", kind, \"?\")\n",
+    "    print(\"-- I'm sorry, we're all out of\", kind)\n",
+    "    for arg in arguments:\n",
+    "        print(arg)\n",
+    "    print(\"-\" * 40)\n",
+    "    for kw in keywords:\n",
+    "        print(kw, \":\", keywords[kw])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b2765aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Do you have any Limburger ?\n",
+      "-- I'm sorry, we're all out of Limburger\n",
+      "It's very runny, sir.\n",
+      "It's really very, VERY runny, sir.\n",
+      "----------------------------------------\n",
+      "shopkeeper : Michael Palin\n",
+      "client : John Cleese\n",
+      "sketch : Cheese Shop Sketch\n"
+     ]
+    }
+   ],
+   "source": [
+    "cheeseshop(\"Limburger\", \"It's very runny, sir.\",\n",
+    "           \"It's really very, VERY runny, sir.\",\n",
+    "           shopkeeper=\"Michael Palin\",\n",
+    "           client=\"John Cleese\",\n",
+    "           sketch=\"Cheese Shop Sketch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3ad95cc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f4ea9701",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get('https://api.github.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "841d89a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get('https://api.github.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "255940fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "87d01733",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'{\"current_user_url\":\"https://api.github.com/user\",\"current_user_authorizations_html_url\":\"https://github.com/settings/connections/applications{/client_id}\",\"authorizations_url\":\"https://api.github.com/authorizations\",\"code_search_url\":\"https://api.github.com/search/code?q={query}{&page,per_page,sort,order}\",\"commit_search_url\":\"https://api.github.com/search/commits?q={query}{&page,per_page,sort,order}\",\"emails_url\":\"https://api.github.com/user/emails\",\"emojis_url\":\"https://api.github.com/emojis\",\"events_url\":\"https://api.github.com/events\",\"feeds_url\":\"https://api.github.com/feeds\",\"followers_url\":\"https://api.github.com/user/followers\",\"following_url\":\"https://api.github.com/user/following{/target}\",\"gists_url\":\"https://api.github.com/gists{/gist_id}\",\"hub_url\":\"https://api.github.com/hub\",\"issue_search_url\":\"https://api.github.com/search/issues?q={query}{&page,per_page,sort,order}\",\"issues_url\":\"https://api.github.com/issues\",\"keys_url\":\"https://api.github.com/user/keys\",\"label_search_url\":\"https://api.github.com/search/labels?q={query}&repository_id={repository_id}{&page,per_page}\",\"notifications_url\":\"https://api.github.com/notifications\",\"organization_url\":\"https://api.github.com/orgs/{org}\",\"organization_repositories_url\":\"https://api.github.com/orgs/{org}/repos{?type,page,per_page,sort}\",\"organization_teams_url\":\"https://api.github.com/orgs/{org}/teams\",\"public_gists_url\":\"https://api.github.com/gists/public\",\"rate_limit_url\":\"https://api.github.com/rate_limit\",\"repository_url\":\"https://api.github.com/repos/{owner}/{repo}\",\"repository_search_url\":\"https://api.github.com/search/repositories?q={query}{&page,per_page,sort,order}\",\"current_user_repositories_url\":\"https://api.github.com/user/repos{?type,page,per_page,sort}\",\"starred_url\":\"https://api.github.com/user/starred{/owner}{/repo}\",\"starred_gists_url\":\"https://api.github.com/gists/starred\",\"topic_search_url\":\"https://api.github.com/search/topics?q={query}{&page,per_page}\",\"user_url\":\"https://api.github.com/users/{user}\",\"user_organizations_url\":\"https://api.github.com/user/orgs\",\"user_repositories_url\":\"https://api.github.com/users/{user}/repos{?type,page,per_page,sort}\",\"user_search_url\":\"https://api.github.com/search/users?q={query}{&page,per_page,sort,order}\"}'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9dc7e94c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"current_user_url\":\"https://api.github.com/user\",\"current_user_authorizations_html_url\":\"https://github.com/settings/connections/applications{/client_id}\",\"authorizations_url\":\"https://api.github.com/authorizations\",\"code_search_url\":\"https://api.github.com/search/code?q={query}{&page,per_page,sort,order}\",\"commit_search_url\":\"https://api.github.com/search/commits?q={query}{&page,per_page,sort,order}\",\"emails_url\":\"https://api.github.com/user/emails\",\"emojis_url\":\"https://api.github.com/emojis\",\"events_url\":\"https://api.github.com/events\",\"feeds_url\":\"https://api.github.com/feeds\",\"followers_url\":\"https://api.github.com/user/followers\",\"following_url\":\"https://api.github.com/user/following{/target}\",\"gists_url\":\"https://api.github.com/gists{/gist_id}\",\"hub_url\":\"https://api.github.com/hub\",\"issue_search_url\":\"https://api.github.com/search/issues?q={query}{&page,per_page,sort,order}\",\"issues_url\":\"https://api.github.com/issues\",\"keys_url\":\"https://api.github.com/user/keys\",\"label_search_url\":\"https://api.github.com/search/labels?q={query}&repository_id={repository_id}{&page,per_page}\",\"notifications_url\":\"https://api.github.com/notifications\",\"organization_url\":\"https://api.github.com/orgs/{org}\",\"organization_repositories_url\":\"https://api.github.com/orgs/{org}/repos{?type,page,per_page,sort}\",\"organization_teams_url\":\"https://api.github.com/orgs/{org}/teams\",\"public_gists_url\":\"https://api.github.com/gists/public\",\"rate_limit_url\":\"https://api.github.com/rate_limit\",\"repository_url\":\"https://api.github.com/repos/{owner}/{repo}\",\"repository_search_url\":\"https://api.github.com/search/repositories?q={query}{&page,per_page,sort,order}\",\"current_user_repositories_url\":\"https://api.github.com/user/repos{?type,page,per_page,sort}\",\"starred_url\":\"https://api.github.com/user/starred{/owner}{/repo}\",\"starred_gists_url\":\"https://api.github.com/gists/starred\",\"topic_search_url\":\"https://api.github.com/search/topics?q={query}{&page,per_page}\",\"user_url\":\"https://api.github.com/users/{user}\",\"user_organizations_url\":\"https://api.github.com/user/orgs\",\"user_repositories_url\":\"https://api.github.com/users/{user}/repos{?type,page,per_page,sort}\",\"user_search_url\":\"https://api.github.com/search/users?q={query}{&page,per_page,sort,order}\"}'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.encoding = 'utf-8' # Optional: requests infers this internally\n",
+    "response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "31ecf2f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'current_user_url': 'https://api.github.com/user',\n",
+       " 'current_user_authorizations_html_url': 'https://github.com/settings/connections/applications{/client_id}',\n",
+       " 'authorizations_url': 'https://api.github.com/authorizations',\n",
+       " 'code_search_url': 'https://api.github.com/search/code?q={query}{&page,per_page,sort,order}',\n",
+       " 'commit_search_url': 'https://api.github.com/search/commits?q={query}{&page,per_page,sort,order}',\n",
+       " 'emails_url': 'https://api.github.com/user/emails',\n",
+       " 'emojis_url': 'https://api.github.com/emojis',\n",
+       " 'events_url': 'https://api.github.com/events',\n",
+       " 'feeds_url': 'https://api.github.com/feeds',\n",
+       " 'followers_url': 'https://api.github.com/user/followers',\n",
+       " 'following_url': 'https://api.github.com/user/following{/target}',\n",
+       " 'gists_url': 'https://api.github.com/gists{/gist_id}',\n",
+       " 'hub_url': 'https://api.github.com/hub',\n",
+       " 'issue_search_url': 'https://api.github.com/search/issues?q={query}{&page,per_page,sort,order}',\n",
+       " 'issues_url': 'https://api.github.com/issues',\n",
+       " 'keys_url': 'https://api.github.com/user/keys',\n",
+       " 'label_search_url': 'https://api.github.com/search/labels?q={query}&repository_id={repository_id}{&page,per_page}',\n",
+       " 'notifications_url': 'https://api.github.com/notifications',\n",
+       " 'organization_url': 'https://api.github.com/orgs/{org}',\n",
+       " 'organization_repositories_url': 'https://api.github.com/orgs/{org}/repos{?type,page,per_page,sort}',\n",
+       " 'organization_teams_url': 'https://api.github.com/orgs/{org}/teams',\n",
+       " 'public_gists_url': 'https://api.github.com/gists/public',\n",
+       " 'rate_limit_url': 'https://api.github.com/rate_limit',\n",
+       " 'repository_url': 'https://api.github.com/repos/{owner}/{repo}',\n",
+       " 'repository_search_url': 'https://api.github.com/search/repositories?q={query}{&page,per_page,sort,order}',\n",
+       " 'current_user_repositories_url': 'https://api.github.com/user/repos{?type,page,per_page,sort}',\n",
+       " 'starred_url': 'https://api.github.com/user/starred{/owner}{/repo}',\n",
+       " 'starred_gists_url': 'https://api.github.com/gists/starred',\n",
+       " 'topic_search_url': 'https://api.github.com/search/topics?q={query}{&page,per_page}',\n",
+       " 'user_url': 'https://api.github.com/users/{user}',\n",
+       " 'user_organizations_url': 'https://api.github.com/user/orgs',\n",
+       " 'user_repositories_url': 'https://api.github.com/users/{user}/repos{?type,page,per_page,sort}',\n",
+       " 'user_search_url': 'https://api.github.com/search/users?q={query}{&page,per_page,sort,order}'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ab616483",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Server': 'GitHub.com', 'Date': 'Mon, 04 Apr 2022 11:40:07 GMT', 'Cache-Control': 'public, max-age=60, s-maxage=60', 'Vary': 'Accept, Accept-Encoding, Accept, X-Requested-With', 'ETag': '\"4f825cc84e1c733059d46e76e6df9db557ae5254f9625dfe8e1b09499c449438\"', 'Access-Control-Expose-Headers': 'ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Used, X-RateLimit-Resource, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type, X-GitHub-SSO, X-GitHub-Request-Id, Deprecation, Sunset', 'Access-Control-Allow-Origin': '*', 'Strict-Transport-Security': 'max-age=31536000; includeSubdomains; preload', 'X-Frame-Options': 'deny', 'X-Content-Type-Options': 'nosniff', 'X-XSS-Protection': '0', 'Referrer-Policy': 'origin-when-cross-origin, strict-origin-when-cross-origin', 'Content-Security-Policy': \"default-src 'none'\", 'Content-Type': 'application/json; charset=utf-8', 'X-GitHub-Media-Type': 'github.v3; format=json', 'Content-Encoding': 'gzip', 'X-RateLimit-Limit': '60', 'X-RateLimit-Remaining': '56', 'X-RateLimit-Reset': '1649075995', 'X-RateLimit-Resource': 'core', 'X-RateLimit-Used': '4', 'Accept-Ranges': 'bytes', 'Content-Length': '510', 'X-GitHub-Request-Id': '41B2:37F2:12F4E99:1444C8B:624AD91F'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2a18fb18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'application/json; charset=utf-8'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.headers['Content-Type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "43b24443",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get('https://api.github.com', timeout=3.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ec4c0d03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib02(n):\n",
+    "    result = []\n",
+    "    a,b = 0,1\n",
+    "    while a < n:\n",
+    "        result.append(a)\n",
+    "        a,b = b, a+b\n",
+    "    return result\n",
+    "\n",
+    "fib02(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "0d8acf12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The\n",
+      "Spain\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "txt = \"The rain in Spain\"\n",
+    "\n",
+    "x = re.search(\"^The\", txt)\n",
+    "\n",
+    "y = re.search(r\"\\bS\\w+\",txt)\n",
+    "print(x.group())\n",
+    "print(y.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a049dc1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['on3', 'two', 'Three']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "my_list= [\"on@3\", \"two#\", \"                 Thre%e\"]\n",
+    "# print([re.sub('[^a-zA-Z0-9]+', '', _) for _ in my_list])\n",
+    "\n",
+    "\n",
+    "def clean_up_words(lst):\n",
+    "    result = []\n",
+    "    for string in lst:\n",
+    "        result.append(re.sub('[^a-zA-Z0-9]+',\"\", string))\n",
+    "    return result\n",
+    "\n",
+    "clean_up_words(my_list)"
    ]
   }
  ],
