--- a/Advance Practice in Python.ipynb
+++ b/Advance Practice in Python.ipynb
@@ -1072,17 +1072,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "a049dc1c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['on3', 'two', 'Three']"
+       "['on3', 'two', 'three']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,12 +1095,21 @@
     "\n",
     "def clean_up_words(lst):\n",
     "    result = []\n",
-    "    for string in lst:\n",
+    "    new_lst = [x.casefold() for x in my_list]\n",
+    "    for string in new_lst:\n",
     "        result.append(re.sub('[^a-zA-Z0-9]+',\"\", string))\n",
     "    return result\n",
     "\n",
     "clean_up_words(my_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c778af52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
